cif/org.eclipse.escet.cif.tests/tests/event_based/conversion_tests/aut_marked.run.err
ERROR: Failed to compute synchronous product for CIF file "event_based/conversion_tests/aut_marked.cif".
CAUSE: CIF synchronous product tool failed due to unsatisfied preconditions:

  ---------------------------------------
  (1/1) Component has a marker predicate.
  ---------------------------------------
   * In automaton "p":
     - marked true;
              ^
